# fledge-plugin-tz

./: .trust.toml  CLAUDE.md  Cargo.toml  README.md  fledge.toml  plugin.toml
.claude/skills/spec-sync/: SKILL.md
.fledge/: .gitignore  meta.toml
.github/workflows/: ci.yml  pages.yml  release.yml
.specsync/: adoption-report.json  registry.toml  sdd.json
.specsync/changes/CHG-0001-adopt-specsync-5-0-1-and-trust-1-0-0-governance-for-the-timezone-fledge-plugin/: approvals.json  change.md  context.md  design.md  docs.md  plan.md  research.md  state.json  tasks.md  testing.md  verification.json
.specsync/changes/CHG-0001-adopt-specsync-5-0-1-and-trust-1-0-0-governance-for-the-timezone-fledge-plugin/deltas/: tz.md
docs/: index.html
specs/tz/: context.md  requirements.md  tasks.md  testing.md  tz.spec.md
src/: main.rs
