[package]
name = "fledge-plugin-tz"
version = "0.1.0"
edition = "2024"
description = "A new Rust CLI"
license = "MIT"
repository = "https://github.com/CorvidLabs/fledge-plugin-tz"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
