[package]
name = "fledge-plugin-tz"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
description = "Timezone utility for fledge — show, convert, and manage saved zones across distributed teams."
license = "MIT"
authors = ["0xLeif"]
repository = "https://github.com/CorvidLabs/fledge-plugin-tz"

[[bin]]
name = "fledge-tz"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
chrono-tz = "0.9"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
